# homekv

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
api/proto/: homekv_service.proto
src/: consistent_hash.rs  lib.rs
src/common/: error.rs  mod.rs
src/gossip/: configuration.rs  delta.rs  digest.rs  failure_detector.rs  message.rs  mod.rs  node.rs  serialize.rs  server.rs  state.rs  transport.rs
src/honey_bees/: configuration.rs  delta.rs  digest.rs  failure_detector.rs  message.rs  mod.rs  node.rs  serialize.rs  server.rs  state.rs  transport.rs
src/storage/: btree_store.rs  mod.rs  mvcc.rs
src/storage/flsm/: mod.rs
src/storage/lsm/: mod.rs  segment.rs
