[package]
name = "homekv"
version = "0.2.0"
edition = "2021"
authors = ["hailizhang <zhanghighly@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.2"
prost = "0.11.2"
bincode = "1.3.3"
serde = "1.0.137"
serde_derive = "1.0.137"
log = "0.4.17"
simplelog = "0.12.0"
config = "0.13.1"
clap = { version = "4.0.26", features = ["derive"] }
atomic-counter = "1.0.1"
tokio = { version = "1.14.0", features = ["net", "sync", "rt-multi-thread", "macros", "time"] }
tokio-stream = { version = "0.1", features = [ "sync" ]}
tracing = "0.1"
async-trait = "0.1"
anyhow = "1.0.66"
rand = { version = "0.8", features = ["small_rng"]}
md5 = "0.7.0"

[build-dependencies]
tonic-build = "0.8"


# server binary
[[bin]]
    name = "homekv"
    path = "src/bin/homekv.rs"

# client binary
[[bin]]
    name = "hkvctl"
    path = "src/bin/hkvctl.rs"

