[package]
name = "homekv"
version = "0.3.0"
edition = "2021"
authors = ["hailizhang <zhanghighly@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.12.1"
prost = "0.13.1"
bincode = "1.3.3"
serde = "1.0.204"
serde_derive = "1.0.204"
log = "0.4.22"
simplelog = "0.12.2"
config = "0.14.0"
clap = { version = "4.5.13", features = ["derive"] }
atomic-counter = "1.0.1"
tokio = { version = "1.39.2", features = [
    "net",
    "sync",
    "rt-multi-thread",
    "macros",
    "time",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
async-trait = "0.1"
anyhow = "1.0.86"
rand = { version = "0.8", features = ["small_rng"] }
md-5 = "0.10.6"
cool-id-generator = "1.0.1"
structopt = "0.3.26"

[build-dependencies]
tonic-build = "0.12.1"


# server binary
[[bin]]
name = "homekv"
path = "src/bin/homekv.rs"

# client binary
[[bin]]
name = "hkvctl"
path = "src/bin/hkvctl.rs"
